test/algeff/wrong/ops2.kk.out
test/algeff/wrong/ops2.kk(38, 3): warning: operation flip is declared as 'fun' but handled here using 'ctl'
(1, 0): error: there is no 'main' function defined
 hint: use the '-l' flag to generate a library?